# docs/swagger.json
@@ -643,6 +643,16 @@
         }
       }
     },
+    "/users/f": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/users/import-sql": {
       "post": {
         "description": "",
